--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "poc-printer-management-amqp",
-  "version": "1.0.0",
+  "name": "wrapper-amqp",
+  "version": "1.1.0",
+  "bin": "index.js",
+  "pkg": {
+    "scripts": "index.js",
+    "assets": [
+      "config/**/*",
+      ".env.example",
+      "node_modules/thread-stream/lib/worker.js"
+    ],
+    "targets": ["node18-win-x64"]
+  },
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "pkg . --out-path dist"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +29,8 @@
     "iconv-lite": "^0.7.0",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1"
+  },
+  "devDependencies": {
+    "pkg": "^5.8.1"
   }
 }
