feat: Add new enviroment variable

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ RETRY_EXCHANGE=print_records.retry
 QUEUE_PREFIX=print_records.queue
 MAX_RETRIES=5
 PREFETCH=5
+WEBHOOK_URL=http://localhost:3000/webhook
 
 POS_API_URL=
 RB_SERVICE_URL=
