--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
       ".env.example",
       "node_modules/thread-stream/lib/worker.js"
     ],
-    "targets": ["node18-win-x64"]
+    "targets": [
+      "node18-win-x64"
+    ]
   },
   "description": "",
   "type": "commonjs",
@@ -23,12 +25,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@node-escpos/core": "^0.6.0",
+    "@node-escpos/network-adapter": "^0.0.1",
+    "@node-escpos/usb-adapter": "^0.3.1",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
     "dotenv": "^17.2.2",
     "iconv-lite": "^0.7.0",
     "pino": "^9.11.0",
-    "pino-pretty": "^13.1.1"
+    "pino-pretty": "^13.1.1",
+    "usb": "^2.16.0"
   },
   "devDependencies": {
     "pkg": "^5.8.1"
