refactor: Update env example

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ RETRY_EXCHANGE=print_records.retry
 QUEUE_PREFIX=print_records.queue
 MAX_RETRIES=5
 PREFETCH=5
-WRAPPER_WEBHOOK_URL=http://localhost:3000/webhook
+API_WEBHOOK_URL=http://localhost:3000
 
 POS_API_URL=
 RB_SERVICE_URL=
